# xmd-compiler

./: .gitignore  Dockerfile  README.md  grammar.pegjs  index.js  jest.config.js  package-lock.json  package.json  webpack.config.js  xmd-win.ps1
apps/cli/: package-lock.json  package.json  webpack.config.js
apps/cli-remote/: package.json  webpack.config.js
cli/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
cli-remote/: package-lock.json  package.json  webpack.config.js
e2e-tests/: README.md  common.js  simple.md  some.test.js  test.js
examples/: .gitignore  README.md  imported1.md  simple.md  simplest.md  slides_with_equations.md  with_abbreviations.md  with_codeblock.md  with_codeblock_and_codeinline.md  with_directives.md  with_envs.md  with_equations.md  with_ifs.md  with_images.md  with_imports.md
pysrv/: README.md  setup.cfg
pysrv/pysrv/: application.py  main.py  session.py  utils.py
pysrv/pysrv/tests/: test_session.py
scripts/: copy_cli.js  copy_cli_remote.js  copy_grammar.js  copy_pysrv.js  copy_res.js  copy_srv.js  copy_xmdparser.js
src/: ast.ts  code_srv.ts  constants.js  constants.ts  generator.js  generator.ts  index.js  index.ts  parser.js  parser.ts  py_srv.ts  template.ts  template_html_tufte.js  template_html_tufte.ts
srv/: constants.ts  custom.d.ts  index.ts  package-lock.json  package.json  parser_controller.ts  remote_generator_factory.ts  remote_serializer.ts  webpack.config.js
tests/: parser_simple.test.js
xmdparser/: README.md  jest.config.js  package-lock.json  package.json  webpack.config.js
(+112 files in other folders)
