[metadata]
name = pysrv
version = 0.0.1
author = Andrea Tino
author_email = andrea.tino@gmail.com
description = A Python server for handling the execution of Python code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/the-second-trial/xmd2html
project_urls =
    Bug Tracker = https://github.com/the-second-trial/xmd2html/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pysrv
python_requires = >=3.6
install_requires =
    wsgiref
